--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,45 @@
-name: Firefox with Cloudflared
+name: Firefox with VNC and Cloudflared
 
 on: [push]
 
 jobs:
-  deploy-firefox:
+  firefox-vnc:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Docker (fix conflicts)
+    - name: Install required packages
       run: |
         sudo apt-get update
-        sudo apt-get remove -y containerd  # Remove conflicting containerd package
-        sudo apt-get install -y docker.io
-        sudo systemctl start docker
-        sudo systemctl enable docker
+        sudo apt-get install -y xvfb x11vnc firefox
 
-    - name: Deploy Firefox container
+    - name: Start Xvfb (virtual display)
       run: |
-        sudo docker run -d \
-          --name firefox \
-          -e TZ=Asia/Hong_Kong \
-          -e DISPLAY_WIDTH=1920 \
-          -e DISPLAY_HEIGHT=1080 \
-          -e KEEP_APP_RUNNING=1 \
-          -e ENABLE_CJK_FONT=1 \
-          -e VNC_PASSWORD=admin \
-          -p 5800:5800 \
-          -p 5900:5900 \
-          -v /data/firefox/config:/config:rw \
-          --shm-size 2g \
-          jlesage/firefox
+        Xvfb :99 -screen 0 1024x768x24 &
+        export DISPLAY=:99
+
+    - name: Start Firefox
+      run: |
+        firefox &
+        sleep 5  # Wait for Firefox to start
+
+    - name: Start VNC server
+      run: |
+        x11vnc -display :99 -forever -shared -passwd password &
+        sleep 5  # Wait for VNC server to start
 
     - name: Install Cloudflared
       run: |
         wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -O cloudflared
         chmod +x cloudflared
 
-    - name: Expose Firefox with Cloudflared (TCP protocol)
+    - name: Expose VNC service with Cloudflared
       run: |
-        ./cloudflared tunnel --url tcp://localhost:5900 > vnc.log 2>&1 &
-        ./cloudflared tunnel --url http://localhost:5800 > web.log 2>&1 &
+        ./cloudflared tunnel --url vnc://localhost:5900 > cloudflared.log 2>&1 &
         sleep 10  # Wait for Cloudflared to establish the tunnel
-        echo "Firefox Web URL: $(grep -o 'https://[^ ]*' web.log)"
-        echo "VNC TCP URL: $(grep -o 'https://[^ ]*' vnc.log)"
+        echo "VNC URL: $(grep -o 'https://[^ ]*' cloudflared.log)"
 
     - name: Keep the job running
       run: |
