--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,8 @@ jobs:
         ./cloudflared tunnel --url tcp://localhost:5900 > cloudflared.log 2>&1 &
         sleep 10  # Wait for Cloudflared to establish the tunnel
         echo "VNC URL: $(grep -o 'https://[^ ]*' cloudflared.log)"
-
+        
+        cloudflared tunnel info
     - name: Keep the job running
       run: |
         while true; do
